--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "split-noise-api",
+  "name": "split-noice-api",
   "version": "1.0.0",
-  "description": "API server for SplitNoise",
+  "description": "API server for SplitNoice",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
